# src/controllers/auth.controller.ts
@@ -23,22 +23,48 @@ const registerValidateSchema  = Yup.object({
   fullName: Yup.string().required(),
   username: Yup.string().required(),
   email: Yup.string().email().required(),
-  password: Yup.string().required(),
+  password: Yup.string().required()
+    .min(6, "Password must be at least 6 characters")
+    .test('at-least-one-uppercase-letter', "Contains at least one uppercase letter", 
+      (value) => {
+        if(!value) return false
+
+        const regex = /^(?=.*[A-Z])/
+
+        return regex.test(value)
+      }
+    )
+    .test('at-least-one-number', "Contains at least one number", 
+      (value) => {
+        if(!value) return false
+
+        const regex = /^(?=.*\d)/
+
+        return regex.test(value)
+      }
+    ),
   confirmPassword: Yup.string().required().oneOf([Yup.ref("password"), ""], "Password not matched"),
 })
 
 export default {
   async register(req: Request, res: Response) {
+    /**
+     #swagger.tags = ["Auth"]
+     #swagger.requestBody = {
+     required: true,
+     schema: {$ref: "#/components/schemas/RegisterRequest"}
+     }
+    */
     const {fullName, username, email, password, confirmPassword} = req.body as unknown as TRegister
   
-    const result  = await UserModel.create({
-      fullName,
-      username,
-      email,
-      password,
-    })
-  
     try {
+      const result  = await UserModel.create({
+        fullName,
+        username,
+        email,
+        password,
+      })
+
       await registerValidateSchema.validate({
         fullName,
         username,
@@ -64,6 +90,7 @@ export default {
   
   async login(req: Request, res: Response) {
     /**
+     #swagger.tags = ["Auth"]
      #swagger.requestBody = {
      required: true,
      schema: {$ref: "#/components/schemas/LoginRequest"}
@@ -78,11 +105,12 @@ export default {
         $or: [
           {
           email: identifier
-        },
-        {
-          username: identifier
-        }
-      ]
+          },
+          {
+            username: identifier
+          },
+        ],
+        isActive: true,
       })
   
       if(!userByIdentifier) {
@@ -129,10 +157,11 @@ export default {
   // Checking if the token is exist in db and will return user data based on the matched token
   async me(req: IReqUser, res: Response) {
     /**
-     #swagger.security = [{
-     "bearerAuth": []
-     }]
-     */
+    #swagger.tags = ["Auth"]
+    #swagger.security = [{
+    "bearerAuth": []
+    }]
+    */
     
     try {
       const user = req.user
@@ -141,6 +170,44 @@ export default {
       res.status(200).json({
         message: "Success get user profile",
         data: result
+      })
+
+    } catch (error) {
+      const err = error as unknown as Error
+      
+      res.status(400).json({
+        message: err.message,
+        data: null
+      })
+    }
+  },
+
+  async activation(req: Request, res: Response) {
+     /**
+    #swagger.tags = ["Auth"]
+    #swagger.requestBody = {
+    required: true,
+    schema: {$ref: "#/components/schemas/ActivationRequest"}
+    }
+    */
+    try {
+      const {code} = req.body as {code: string}
+
+      const user = await UserModel.findOneAndUpdate(
+        {
+          activationCode: code,
+        }, 
+        {
+          isActive: true, // value that updated
+        }, 
+        {
+          new: true // if true, immediately updating value once the selected value is updated
+        }
+      )
+
+      res.status(200).json({
+        message: "User successfully activated",
+        data: user
       })
 
     } catch (error) {
