# src/models/user.model.ts
@@ -1,5 +1,7 @@
 import mongoose from "mongoose";
 import { encrypt } from "../utils/encryption";
+import { renderMailHtml, sendMail } from "../utils/mail/mails";
+import { CLIENT_HOST, EMAIL_SMTP_USER } from "../utils/env";
 
 export interface User {
   fullName: string;
@@ -10,6 +12,7 @@ export interface User {
   profilePicture: string
   isActive: boolean
   activationCode: string
+  createdAt?: string
 }
 
 const Schema = mongoose.Schema
@@ -21,11 +24,13 @@ const UserSchema = new Schema<User>({
   },
   username: {
     type: Schema.Types.String,
-    required: true
+    required: true,
+    unique: true
   },
   email: {
     type: Schema.Types.String,
-    required: true
+    required: true,
+    unique: true
   },
   password: {
     type: Schema.Types.String,
@@ -51,13 +56,44 @@ const UserSchema = new Schema<User>({
   timestamps: true
 })
 
-// Pre is a Middleware, which runs before the "save" action
+// pre is a middleware, which runs before the "save" action
 UserSchema.pre("save", function (next) {
   const user = this;
 
   user.password = encrypt(user.password)
+  user.activationCode = encrypt(user.id)
 
   next()
+})
+
+// post is a middleware, which runs before the "save" action.
+// doc param holds the user data
+UserSchema.post("save", async function(doc, next) {
+  try {
+    const user = doc
+
+    console.log(`Send email to: ${user.email}`)
+  
+    const contentMail = await renderMailHtml("registration-success.ejs", {
+      username: user.username,
+      fullName: user.fullName,
+      email: user.email,
+      createdAt: user.createdAt,
+      activationLink: `${CLIENT_HOST}/auth/activation?code=${user.activationCode}`
+    })
+  
+    await sendMail({
+      from: EMAIL_SMTP_USER,
+      to: user.email,
+      subject: "Activation Account",
+      html: contentMail
+    })
+
+  } catch (error) {
+    console.log(error)
+  } finally {
+    next()
+  }
 })
 
 // delete password from returned User data
